--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/information_schema?useUnicode=
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+project.app-project-name=oa-test
+project.out-path=D:\\sourcecode\\code
+project.base-package=cn.zy
