代码生成器

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 project.app-project-name=oa-test
 project.out-path=D:\\sourcecode\\code
 project.base-package=cn.zy
+project.table-schema=oa-recruit
